--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <script>
-const socket = new WebSocket('ws://localhost:9035/test');
+const socket = new WebSocket('ws://localhost:9035/messages');
 
 // Connection opened
 socket.addEventListener('open', (event) => {
